@@ -60,11 +60,11 @@ public class FactoryProvider2Test extends TestCase {
 
     Mustang blueMustang = (Mustang) carFactory.create(Color.BLUE);
     assertEquals(Color.BLUE, blueMustang.color);
-    assertEquals(5.0d, blueMustang.engineSize);
+    assertEquals(5.0d, blueMustang.engineSize, 0.0);
 
     Mustang redMustang = (Mustang) carFactory.create(Color.RED);
     assertEquals(Color.RED, redMustang.color);
-    assertEquals(5.0d, redMustang.engineSize);
+    assertEquals(5.0d, redMustang.engineSize, 0.0);
   }
 
   public void testAssistedFactoryWithAnnotations() {
@@ -144,7 +144,7 @@ public class FactoryProvider2Test extends TestCase {
 
     Corvette redCorvette = (Corvette) carFactory.create(Color.RED, false);
     assertEquals(Color.RED, redCorvette.color);
-    assertEquals(140f, redCorvette.maxMph);
+    assertEquals(140f, redCorvette.maxMph, 0.0f);
     assertFalse(redCorvette.isConvertable);
   }
 
@@ -203,7 +203,7 @@ public class FactoryProvider2Test extends TestCase {
 
     Porsche grayPorsche = (Porsche) carFactory.create(Color.GRAY);
     assertEquals(Color.GRAY, grayPorsche.color);
-    assertEquals(50000d, grayPorsche.price);
+    assertEquals(50000d, grayPorsche.price, 0.0);
     assertEquals(911, grayPorsche.model);
     assertEquals("turbo", grayPorsche.name);
   }
@@ -300,7 +300,7 @@ public class FactoryProvider2Test extends TestCase {
     DeLorean deLorean = (DeLorean) carFactory.create(Color.GRAY);
     assertEquals(Color.GRAY, deLorean.color);
     assertEquals("Flux Capacitor", deLorean.features.iterator().next());
-    assertEquals(new Integer(88), deLorean.featureActivationSpeeds.iterator().next());
+    assertEquals(Integer.valueOf(88), deLorean.featureActivationSpeeds.iterator().next());
   }
 
   public static class DeLorean implements Car {
@@ -673,7 +673,7 @@ public class FactoryProvider2Test extends TestCase {
 
     Mustang mustang = factory.create(Color.RED);
     assertSame(Color.RED, mustang.color);
-    assertEquals(5.0d, mustang.engineSize);
+    assertEquals(5.0d, mustang.engineSize, 0.0);
   }
 
   static class Fleet {
@@ -701,7 +701,7 @@ public class FactoryProvider2Test extends TestCase {
     Fleet fleet = fleetFactory.createFleet(Color.RED);
 
     assertSame(Color.RED, fleet.mustang.color);
-    assertEquals(5.0d, fleet.mustang.engineSize);
+    assertEquals(5.0d, fleet.mustang.engineSize, 0.0);
     assertSame(Color.RED, fleet.camaro.color);
     assertEquals(250, fleet.camaro.horsePower);
     assertEquals(1984, fleet.camaro.modelYear);
@@ -753,14 +753,15 @@ public class FactoryProvider2Test extends TestCase {
   /*if[AOP]*/
   public void testMethodInterceptorsOnAssistedTypes() {
     final AtomicInteger invocationCount = new AtomicInteger();
-    final org.aopalliance.intercept.MethodInterceptor interceptor
-        = new org.aopalliance.intercept.MethodInterceptor() {
-      public Object invoke(org.aopalliance.intercept.MethodInvocation methodInvocation)
-          throws Throwable {
-        invocationCount.incrementAndGet();
-        return methodInvocation.proceed();
-      }
-    };
+    final org.aopalliance.intercept.MethodInterceptor interceptor =
+        new org.aopalliance.intercept.MethodInterceptor() {
+          @Override
+          public Object invoke(org.aopalliance.intercept.MethodInvocation methodInvocation)
+              throws Throwable {
+            invocationCount.incrementAndGet();
+            return methodInvocation.proceed();
+          }
+        };
 
     Injector injector = Guice.createInjector(new AbstractModule() {
       @Override
@@ -861,7 +862,7 @@ public class FactoryProvider2Test extends TestCase {
 
     Mustang blueMustang = mustangFactory.create(Color.BLUE);
     assertEquals(Color.BLUE, blueMustang.color);
-    assertEquals(5.0d, blueMustang.engineSize);
+    assertEquals(5.0d, blueMustang.engineSize, 0.0);
 
     Camaro redCamaro = camaroFactory.create(Color.RED);
     assertEquals(Color.RED, redCamaro.color);
@@ -935,13 +936,13 @@ public class FactoryProvider2Test extends TestCase {
     Mustang mustang = new Mustang(5000d, Color.BLACK);
     MustangInsurance mustangPolicy =
         (MustangInsurance) mustangInsuranceFactory.create(mustang, 800.0d);
-    assertEquals(800.0d, mustangPolicy.premium);
-    assertEquals(50000.0d, mustangPolicy.limit);
+    assertEquals(800.0d, mustangPolicy.premium, 0.0);
+    assertEquals(50000.0d, mustangPolicy.limit, 0.0);
 
     Camaro camaro = new Camaro(3000, 1967, Color.BLUE);
     CamaroInsurance camaroPolicy = (CamaroInsurance) camaroInsuranceFactory.create(camaro, 800.0d);
-    assertEquals(800.0d, camaroPolicy.premium);
-    assertEquals(100000.0d, camaroPolicy.limit);
+    assertEquals(800.0d, camaroPolicy.premium, 0.0);
+    assertEquals(100000.0d, camaroPolicy.limit, 0.0);
   }
 
   public interface InsuranceFactory<T extends Car> {
@@ -974,13 +975,13 @@ public class FactoryProvider2Test extends TestCase {
     Mustang mustang = new Mustang(5000d, Color.BLACK);
     MustangInsurance mustangPolicy =
         (MustangInsurance) mustangInsuranceFactory.create(mustang, 800.0d);
-    assertEquals(800.0d, mustangPolicy.premium);
-    assertEquals(50000.0d, mustangPolicy.limit);
+    assertEquals(800.0d, mustangPolicy.premium, 0.0);
+    assertEquals(50000.0d, mustangPolicy.limit, 0.0);
 
     Camaro camaro = new Camaro(3000, 1967, Color.BLUE);
     CamaroInsurance camaroPolicy = (CamaroInsurance) camaroInsuranceFactory.create(camaro, 800.0d);
-    assertEquals(800.0d, camaroPolicy.premium);
-    assertEquals(100000.0d, camaroPolicy.limit);
+    assertEquals(800.0d, camaroPolicy.premium, 0.0);
+    assertEquals(100000.0d, camaroPolicy.limit, 0.0);
   }
 
   public static class AutoInsurance<T extends Car> implements Insurance<T> {
@@ -1017,8 +1018,8 @@ public class FactoryProvider2Test extends TestCase {
     Camaro camaro = new Camaro(3000, 1967, Color.BLUE);
     AutoInsurance<?> camaroPolicy =
         (AutoInsurance<?>) camaroInsuranceFactory.create(camaro, 800.0d);
-    assertEquals(800.0d, camaroPolicy.premium);
-    assertEquals(50000.0d, camaroPolicy.limit);
+    assertEquals(800.0d, camaroPolicy.premium, 0.0);
+    assertEquals(50000.0d, camaroPolicy.limit, 0.0);
     assertEquals(camaro, camaroPolicy.car);
   }
 
@@ -1056,11 +1057,11 @@ public class FactoryProvider2Test extends TestCase {
 
     Mustang blueMustang = (Mustang) carFactory.create(Color.BLUE);
     assertEquals(Color.BLUE, blueMustang.color);
-    assertEquals(5.0d, blueMustang.engineSize);
+    assertEquals(5.0d, blueMustang.engineSize, 0.0);
 
     Mustang redMustang = (Mustang) carFactory.create(Color.RED);
     assertEquals(Color.RED, redMustang.color);
-    assertEquals(5.0d, redMustang.engineSize);
+    assertEquals(5.0d, redMustang.engineSize, 0.0);
   }
 
   public interface Equals {
@@ -1095,7 +1096,7 @@ public class FactoryProvider2Test extends TestCase {
     Equals.Factory equalsFactory = injector.getInstance(Equals.Factory.class);
     Equals.Impl shallowEquals = (Impl) equalsFactory.equals(ComparisonMethod.SHALLOW);
     assertEquals(ComparisonMethod.SHALLOW, shallowEquals.comparisonMethod);
-    assertEquals(0.01d, shallowEquals.sigma);
+    assertEquals(0.01d, shallowEquals.sigma, 0.0);
   }
 
   static class Segway implements Car {
